overflow fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@ html {
     --serif-font: 'PT Serif', serif;
     font-size: 16px;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
